--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
-REACT_APP_API_END_POINT=https://opendata.resas-portal.go.jp
+REACT_APP_API_END_POINT=https://opendata.resas-portal.go.jp/
+REACT_APP_API_PREFECTURES=api/v1/prefectures
 REACT_APP_API_KEY=I2LTS77JJoJtCzl9yfBECaT5dO5TmKExQmBqLeZB
